--- a/MovieLockerAlphaThree/AndroidManifest.xml
+++ b/MovieLockerAlphaThree/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -55,6 +57,12 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.laziton.movielocker.MovieListActivity" />
+        </activity>
+        <activity android:name="com.laziton.movielocker.ScannerActivity"
+            		android:label="@string/movie_title">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.laziton.movielocker.MovieActivity" />
         </activity>
     </application>
 
